# c_project_template

./: CMakeLists.txt  README.md
include/: calculations.h
src/: calculations.c  main.c
